feat(controller): Adicionar documentação Swagger para ContatoController